# riptide_localization

./: CMakeLists.txt  package.xml  setup.cfg  setup.py
launch/: fake_nav.launch.py  navigation.launch  navigation.launch.py
params/: ekf_config.yaml  ekf_no_converters.yaml  ekf_template.yaml
riptide_localization2/: depth_converter.py  dope_converter.py  dvl_converter.py  fake_ekf.py
scripts/: depth_converter.py  dvl_converter.py
