<?xml version="1.0"?>
<package format="2">
  <name>riptide_localization</name>
  <version>0.0.1</version>
  <description>Code to handle localization and navigation</description>

  <maintainer email="osu.uwrt@gmail.com">OSU UWRT</maintainer>

  <license>BSD</license>

  <url type="website">http://go.osu.edu/uwrt</url>
  <url type="repository">http://github.com/uwrt-osu/riptide_gazebo</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>robot_localization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <export>
  </export>
</package>
