<!-- IMPORTANT NOTE: You MUST install transforms3d via "pip install transforms3d," or else the converter nodes will not work-->

<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>riptide_localization2</name>
  <version>1.0.0</version>
  <description>Code to handle localization and navigation</description>
  <maintainer email="osu.uwrt@gmail.com">OSU UWRT</maintainer>
  <license>BSD</license>


  <url type="website">https://org.osu.edu/osu-uwrt/</url>
  <url type="repository">http://github.com/osu-uwrt/riptide_localization</url>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
